# kwcode

./: .gitignore  CHANGELOG.md  CODE_REVIEW_LESSONS.md  README.md  README_zh.md  STATUS.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
extension/: package.json
extension/src/: extension.ts  panel.ts  server-client.ts
kaiwu/: PRIVACY.md  __init__.py  __main__.py
kaiwu/ast_engine/: __init__.py  ast_grep_engine.py  call_graph.py  graph_builder.py  language_detector.py  parser.py
kaiwu/audit/: logger.py
kaiwu/builtin_experts/bugfix/: SKILL.md
kaiwu/builtin_experts/bugfix/scripts/: extract_traceback.py
kaiwu/builtin_experts/fastapi/: SKILL.md
kaiwu/builtin_experts/golang/: SKILL.md
kaiwu/builtin_experts/java/: SKILL.md
kaiwu/builtin_experts/rust/: SKILL.md
kaiwu/builtin_experts/testgen/: SKILL.md
kaiwu/builtin_experts/testgen/scripts/: run_coverage.py
kaiwu/builtin_experts/typescript/: SKILL.md
kaiwu/cli/: formatters.py  main.py  onboarding.py  repl.py
kaiwu/cli/commands/: __init__.py  config.py  expert.py  log_cmd.py  model_cmd.py  task.py
kaiwu/core/: checkpoint.py  cognitive_gate.py  context.py  context_pruner.py  event_bus.py  gap_detector.py  gate.py  model_capability.py  orchestrator.py  planner.py  sysinfo.py  task_compiler.py  task_planner.py  think_config.py  upstream_manifest.py  wink.py
kaiwu/experts/: chat_expert.py  debug_subagent.py  generator.py  locator.py  reviewer.py  search_augmentor.py  search_subagent.py  verifier.py  vision_expert.py
kaiwu/flywheel/: ab_tester.py  prompt_optimizer.py  skill_drafter.py  strategy_stats.py  trajectory_collector.py  user_pattern_memory.py
kaiwu/llm/: llama_backend.py
kaiwu/registry/: expert_loader.py  expert_registry.py
kaiwu/search/: duckduckgo.py  pced_lite.py  query_generator.py  search_router.py
kaiwu/server/: __init__.py  app.py  models.py  pipeline_factory.py
kaiwu/telemetry/: client.py
kaiwu/tests/: test_ast_engine_go.py  test_core.py  test_multilang.py  test_server.py  test_skill_loader.py  test_task_compiler.py
kaiwu/tests/bench_tasks/t31_event_sourcing/: aggregate.py  event_store.py  projection.py  projector.py  test_event_sourcing.py
kaiwu/tests/bench_tasks/t32_rate_limiter/: limiter.py  test_rate_limiter.py  token_bucket.py
kaiwu/tests/bench_tasks/t33_workflow_engine/: workflow.py
kaiwu/tests/bench_tasks/t38_frontend_backend_pagination/: backend.py  frontend.py  test_pagination.py
kaiwu/tests/bench_tasks/t39_frontend_backend_upload/: backend.py  frontend.py  test_upload.py
kaiwu/tests/bench_tasks/t46_go_pubsub/: broker.go  filter.go  go.mod  pubsub_test.go  subscriber.go
kaiwu/tests/diagnostic/: test_routing_layer_stats.py  test_stub_ratio_threshold.py
kaiwu/tests/regression/: test_orchestrator_flow.py
kaiwu/tools/: hashline.py  import_fixer.py  tool_gateway.py
kaiwu/tui/: __init__.py  app.py
kaiwu/validation/: mechanism_audit.py
tests/: test_audit_model.py  test_flywheel_new.py  test_p0_p1_p2.py
tests/vision/: test_vision_expert.py
(+51 files in other folders)
