[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwcode"
version = "0.9.0"
description = "KwCode - Local-model coding agent with MoE expert pipeline"
requires-python = ">=3.10"

dependencies = [
    "llama-cpp-python>=0.2.90",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "trafilatura>=1.12.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.0",
    "rank-bm25>=0.2.2",
    "pytest>=7.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
rerank = ["sentence-transformers>=2.7.0"]

[project.scripts]
kwcode = "kaiwu.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaiwu*"]

[tool.setuptools.package-data]
"kaiwu.builtin_experts" = ["*.yaml"]
